[SPARK-YARN-CLIENT] Replace in-JVM MiniDFS/MiniYARN/MiniKdc with Testcontainers
Replaces the in-process MiniDFSCluster, MiniYARNCluster, and MiniKdc with
Docker containers managed by Testcontainers:

- HadoopContainer: pseudo-distributed Hadoop (HDFS + YARN) in Docker.
  Spark jars from the test classpath are bind-mounted into the container
  at /opt/spark-jars/ so YARN containers have Spark classes available.
  Uses the container's bridge IP for HDFS/YARN client connections.

- KdcContainer: MIT Kerberos KDC in Docker with TEST.REALM.
  Creates spark/localhost, hdfs/localhost, yarn/localhost principals.
  Exports keytab and generates krb5.conf pointing to the container.

- Removes heavy test dependencies: hadoop-hdfs, hadoop-hdfs:tests,
  hadoop-common:tests, hadoop-yarn-server-tests, hadoop-yarn-server-rm,
  bouncycastle, mockito, junit4, hadoop-minikdc.

- Tests gracefully skip when Docker is unavailable (e.g. CI without
  Docker or sandboxed environments). Config-only tests always run.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>